# snaky-arena

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  add_deps.sh  debug_models.py  pyproject.toml  run_debug.sh  run_tests.sh  test_backend.sh  test_snaky_arena.db-journal
backend/app/: database.py  db.py  db_models.py  dependencies.py  main.py  models.py
backend/app/routers/: auth.py  leaderboard.py  live.py
backend/tests/: conftest.py  repro_live.py  test_auth.py  test_leaderboard.py  test_live.py  test_repro_auth.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthProvider.tsx  Leaderboard.tsx
frontend/src/components/ui/: input.tsx
frontend/src/hooks/: useAuth.test.ts  useGame.ts
frontend/src/lib/: api.test.ts  api.ts  gameLogic.test.ts
frontend/src/pages/: Index.tsx  LeaderboardPage.tsx
frontend/src/test/: setup.ts
src/: App.tsx
src/components/: AuthForm.tsx  GameBoard.tsx  GameControls.tsx  Header.tsx  Leaderboard.tsx  SpectatorView.tsx
src/components/ui/: button.tsx
src/hooks/: useAuth.ts  useGame.ts  useSpectator.ts
src/lib/: api.test.ts  api.ts  gameLogic.ts
src/pages/: Auth.tsx  WatchPage.tsx
